--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html ng-app="app">
 
 <head>
     <meta charset="UTF-8">
@@ -17,11 +17,24 @@
 
 <body>
 
+    <header></header>
+    <content>
+        <ui-view></ui-view>
+    </content>
+    <footer></footer>
 
-    <!--Import jQuery before materialize.js-->
+
+    <!--Import Javascript-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="node_modules/materialize-css/js/materialize.js"></script>
+    <script type="text/javascript" src="node_modules/angular/angular.min.js"></script>
+    <script type="text/javascript" src="node_modules/angular-resource/angular-resource.min.js"></script>
+    <script type="text/javascript" src="node_modules/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script type="text/javascript" src="app.js"></script>
+    <script type="text/javascript" src="app/components/home/home.js"></script>
+    <script type="text/javascript" src="app/components/artist/artist.js"></script>
+    <script type="text/javascript" src="app/components/release/release.js"></script>
+    <script type="text/javascript" src="app/components/label/label.js"></script>
 </body>
 
 </html>
