--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 
 <body>
 
-    <header></header>
+    <header>
+      <h1>The Wilders 3</h1>
+    </header>
     <content>
         <ui-view></ui-view>
     </content>
