--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
 
 <body>
     <header></header>
-    <!--<content>-->
-        <ui-view></ui-view>
-    <!--</content>-->
+    <content></content>
     <footer></footer>
 
 
